# qtscxml

./: .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  REUSE.toml  TODO.txt  conanfile.py  configure.cmake  configure.json  dependencies.yaml  qtscxml.pro  scxml-tools.pro  sync.profile
examples/scxml/calculator/: CMakeLists.txt  main.cpp
examples/scxml/mediaplayer/: CMakeLists.txt
src/: CMakeLists.txt  src.pro
src/global/: CMakeLists.txt
src/imports/: CMakeLists.txt  imports.pro  qml-module.pro  state.cpp
src/imports/scxmlstatemachine/: .prev_CMakeLists.txt  CMakeLists.txt  eventconnection.cpp  eventconnection.h  eventconnection_p.h  invokedservices.cpp  invokedservices.h  invokedservices_p.h  plugin.cpp  plugins.qmltypes  qmldir  scxmlstatemachine.pro  signalevent.cpp  signalevent.h  state.cpp  state.h  statemachine.cpp  statemachine.h  statemachineextended.cpp  statemachineextended.h  statemachineextended_p.h  statemachineloader.cpp  statemachineloader.h  (+3 more)
src/plugins/: CMakeLists.txt
src/qml-module/: plugin.cpp  qml-module.pro  qmldir  signalevent.cpp  signalevent.h  state.cpp  state.h  statemachine.cpp  statemachine.h
src/qscxml/: datamodel.cpp  datamodel.h  ecmascriptdatamodel.cpp  ecmascriptdatamodel.h  ecmascriptplatformproperties.cpp  ecmascriptplatformproperties.h  ecmascriptplatformproperties_p.h  executablecontent.cpp  executablecontent.h  executablecontent_p.h  nulldatamodel.cpp  nulldatamodel.h  qscxml.pro  scxmlcppdumper.cpp  scxmlcppdumper.h  scxmlevent.cpp  scxmlevent.h  scxmlevent_p.h  scxmlglobals.h  scxmlparser.cpp  scxmlparser.h  scxmlparser_p.h  scxmlqstates.cpp  scxmlqstates.h  scxmlstatemachine.cpp  scxmlstatemachine.h  scxmlstatemachine_p.h  scxmlstatetable.cpp  scxmlstatetable.h  scxmlstatetable_p.h
src/qscxmlcpp/: qscxmlcpp.cpp  qscxmlcpp.pro
src/qscxmllib/: datamodel.cpp  datamodel.h  ecmascriptdatamodel.cpp  ecmascriptdatamodel.h  ecmascriptplatformproperties.cpp  ecmascriptplatformproperties.h  executablecontent.cpp  executablecontent.h  executablecontent_p.h  nodatamodel.cpp  nodatamodel.h  nulldatamodel.cpp  nulldatamodel.h  qscxmllib.pri  qscxmllib.pro  scxmlcppdumper.cpp  scxmlcppdumper.h  scxmldumper.cpp  scxmldumper.h  scxmlevent.cpp  scxmlevent_p.h  scxmlglobals.h  scxmlparser.cpp  scxmlparser.h  scxmlstatetable.cpp  scxmlstatetable.h  scxmlstatetable_p.h
src/qscxmlparse/: qscxmlparse.cpp  qscxmlparse.pro
src/qscxmlserver/: qscxmlserver.cpp  qscxmlserver.pro
src/scxml/: .prev_CMakeLists.txt  CMakeLists.txt  Qt6ScxmlMacros.cmake  configure.cmake  cppdatamodel.cpp  cppdatamodel.h  cppdatamodel_p.h  datamodel.cpp  datamodel.h  ecmascriptdatamodel.cpp  ecmascriptdatamodel.h  ecmascriptplatformproperties.cpp  ecmascriptplatformproperties_p.h  executablecontent.cpp  executablecontent.h  executablecontent_p.h  nulldatamodel.cpp  nulldatamodel.h  qscxmlcompiler.cpp  qscxmlcompiler_p.h  qscxmlcppdatamodel.cpp  qscxmlcppdatamodel.h  qscxmlcppdatamodel_p.h  qscxmldatamodel.cpp  qscxmldatamodel.h  qscxmldatamodel_p.h  qscxmldatamodelplugin.cpp  qscxmldatamodelplugin.h  qscxmldatamodelplugin_p.h  qscxmlecmascriptdatamodel.cpp  qscxmlecmascriptdatamodel.h  qscxmlecmascriptplatformproperties.cpp  qscxmlecmascriptplatformproperties_p.h  qscxmlerror.cpp  qscxmlerror.h  qscxmlevent.cpp  qscxmlevent.h  qscxmlevent_p.h  qscxmlexecutablecontent.cpp  qscxmlexecutablecontent.h  (+35 more)
src/scxmlqml/: CMakeLists.txt  eventconnection.cpp  eventconnection_p.h  invokedservices.cpp  invokedservices_p.h  qscxmlqmlglobals_p.h  statemachineloader.cpp  statemachineloader_p.h
src/statemachine/: CMakeLists.txt  configure.cmake  configure.json  qabstractstate.cpp  qabstractstate.h  qabstractstate_p.h  qabstracttransition.cpp  qabstracttransition.h  qabstracttransition_p.h  qeventtransition.cpp  qeventtransition.h  qeventtransition_p.h  qfinalstate.cpp  qhistorystate.cpp  qhistorystate.h  qhistorystate_p.h  qsignaltransition.cpp  qsignaltransition.h  qstate.cpp  qstate.h  qstate_p.h  qstatemachine.cpp  qstatemachine.h  qstatemachine_p.h  qstatemachineglobal.h  statemachine.pri  statemachine.pro
src/statemachineqml/: CMakeLists.txt  childrenprivate_p.h  finalstate.cpp  finalstate_p.h  qstatemachineqmlglobals_p.h  signaltransition.cpp  signaltransition_p.h  state.cpp  state_p.h  statemachine.cpp  statemachine_p.h  timeouttransition.cpp  timeouttransition_p.h
tests/: .prev_CMakeLists.txt  CMakeLists.txt  tests.pro
tests/auto/: .prev_CMakeLists.txt  CMakeLists.txt  auto.pro
tests/cppgen/: cppgen.pro  tst_cppgen.cpp
tests/scion/: scion.pro  tst_scion.cpp
tests/testCpp/: genTestSxcml.py  out.cpp  out.h  testCpp.pro  testcpp.cpp
(+387 files in other folders)
